set up index page

--- a/class.html
+++ b/class.html
@@ -13,25 +13,10 @@
 
 
 <script type="text/javascript">
-  
-  function func(){
-    alert(3);
+
+  for (var count = 0; count <= 10; count++){
+    document.write(count);
   }
-
-  var counter = 0;
-
-  ++counter;
-
-  console.log('Pre: ' + counter);
-
-
-
-  //document.getElementById('splButton').onclick = func;
-
-  //Event listener part
-  // var buttonVar = document.getElementById('splButton');
-  // //butonVar.onclick = func;
-  // buttonVar.addEventListener('click', func, false );
 
 </script>
 
