--- a/book.html
+++ b/book.html
@@ -7,11 +7,12 @@
 
 
 <script type="text/javascript">
-  var members = {
-    founder: "Lois"
-  };
+  
+  //var colors = ['white', 'silver', 'blue'];
 
-  console.log(members['founder']);
+  var cols = ['white', 'silver', 'blue'].splice(1,0,"gray");
+
+  console.log(cols)
 
 </script>
 </body>
